<resources>
    <string name="app_name">My Notes App</string>
    <string name="save_note">Save Note</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_note">Add Note</string>
    <string name="enter_your_note_title_here">Enter your Note Title here</string>
    <string name="enter_your_note_description_here">Enter your Note Description here</string>
    <string name="update_note">Update Note</string>
    <string name="edit_your_note_description_here">Edit your Note Description here</string>
    <string name="edit_your_note_title_here">Edit your Note Title here</string>
    <string name="edit_or_delete_note">Edit Or Delete Note</string>
    <string name="note_title">Note Title</string>
    <string name="note_description">Note Description</string>
    <string name="_10_10_am">10:10 AM</string>
    <string name="_07_10_2024">07/10/2024</string>
    <string name="pick_a_time">Pick A Time</string>
    <string name="pick_a_date">Pick A Date</string>
    <string name="note_no">Note No:</string>
    <string name="_0">0</string>
    <string name="welcome_to_my_notes_app_n_store_your_all_notes_here">Welcome to My Notes App\n Store your all Notes here</string>
    <string name="to_store_your_notes_n_please_login_or_register_first">To store your Notes,\n Please Login Or Register first!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_your_email_address_here">Enter your Email Address here</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="login_here">Login Here</string>
    <string name="welcome_back_n_you_ve_been_missed">Welcome back\n You\'ve been missed!</string>
    <string name="enter_your_password_here">Enter your Password here</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="register_here">Register Here</string>
    <string name="create_an_account_n_so_you_can_store_your_notes">Create an Account \n So you can store your Notes!</string>
    <string name="already_have_an_account">Already have an Account</string>
    <string name="enter_your_user_name_here">Enter your User Name here</string>
    <string name="logout">Logout</string>
    <string name="enter_your_note_number_here">Enter your Note Number here</string>
    <string name="edit_your_note_number_here">Edit your Note Number here</string>
    <string name="design_by">Design By</string>
    <string name="jubayer_ahamad_tayef">Jubayer Ahamad Tayef</string>
    <string name="exit">Exit</string>
    <string name="register_please">Register Please</string>
    <string name="invalid_email_password">Invalid Email or Password!</string>
    <string name="provide_needed_info">Please, provide needed information, then click Register again.</string>
    <string name="register_success">Register Successfully</string>
    <string name="reset_password">Reset Password Successfully</string>
    <string name="verify_email_message">Please verify your email: %1$s</string>
    <string name="check_email_message">Please check your email: %1$s</string>
    <string name="registration_failed">Registration failed, please try again.</string>
    <string name="unknown_error">Unknown error</string>
    <string name="verification_email_sent">Verification email sent to %1$s</string>
    <string name="failed_to_send_verification">Failed to send verification email.</string>
    <string name="ok">OK</string>
    <string name="login_please">Login Please</string>
    <string name="enter_valid_email">Please, enter a valid email address.</string>
    <string name="login_successfully">Login Successfully, %1$s</string>
    <string name="verify_email_address">Please verify your email address.</string>
    <string name="password_reset_email_sent">Password reset email sent to %1$s</string>
    <string name="failed_to_send_reset_email">Failed to send password reset email.</string>
    <string name="email_not_verified">Email Not Verified</string>
    <string name="welcome">Welcome</string>
    <string name="verify_email_to_proceed">Your email is not verified. Please verify your email to proceed.</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="resend_verification_email_message">Your email address %1$s is not verified. Do you want to resend the verification email?</string>
    <string name="resend">Resend</string>
    <string name="cancel">Cancel</string>
    <string name="authentication_failed">Authentication failed, please try again.</string>
    <string name="password_required">Password is required.</string>
    <string name="email_required">Email is required.</string>
    <string name="password_length">Password must be at least 6 characters long.</string>
    <string name="password_uppercase">Password must include at least one uppercase letter.</string>
    <string name="password_lowercase">Password must include at least one lowercase letter.</string>
    <string name="password_number">Password must include at least one number.</string>
    <string name="password_special_character">Password must include at least one special character (e.g., @#\$%^&amp;*).</string>
    <string name="please_provide_valid_information_and_try_again">Please provide valid information and try again.</string>
    <string name="user_name_is_required">User name is required.</string>
    <string name="user_name_must_contain_at_least_one_uppercase_or_lowercase_letter">User name must contain at least one uppercase or lowercase letter.</string>
    <string name="note_number_is_required">Note number is required.</string>
    <string name="note_title_is_required">Note title is required.</string>
    <string name="invalid_note_title">Invalid note title.</string>
    <string name="invalid_note_number">Invalid note number.</string>
    <string name="invalid_note_description">Invalid note description.</string>
    <string name="note_description_is_required">Note description is required.</string>
    <string name="no_internet_connection_please_connect_to_internet">No Internet Connection! Please, connect to internet.</string>
    <string name="delete_note">Delete Note</string>
    <string name="do_you_want_to_delete_this_note">Do you want to delete this Note?</string>
    <string name="do_you_want_to_update_this_note">Do you want to update this Note?</string>
    <string name="yes">Yes</string>
    <string name="note_deleted">Note Deleted!</string>
    <string name="no">No</string>
    <string name="note_updated">Note Updated!</string>
    <string name="please_must_be_enter_note_title_and_also_note_description_then_click_again_save_note">Please, Must be enter Note Title and also Note Description. Then click again Save Note!</string>
    <string name="please_must_be_enter_note_number_note_title_and_also_note_description_then_click_again_update_note">Please, Must be enter Note Number, Note Title and also Note Description. Then click again Update Note!</string>
    <string name="hh_mm_aa">hh:mm aa</string>
    <string name="hh_mm">HH:mm</string>
    <string name="note_saved">Note Saved</string>
    <string name="please_wait">Please, wait...</string>
</resources>